--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,14 +14,23 @@
 			"jdkVersion": "17",
 			"jdkDistro": "tem"
 		}
-	}
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Configure tool-specific properties.
 	// "customizations": {},
-
+	"customizations": {
+		"vscode": {
+			"settings": {
+				"java.server.launchMode": "Standard"
+			},
+			"extensions": [
+				"vscjava.vscode-java-pack"
+			]
+		}
+	}
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
