--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,3 +22,15 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  akhq:
+    image: tchiotludo/akhq
+    restart: unless-stopped
+    environment:
+      AKHQ_CONFIGURATION: |
+        akhq:
+          pagination:
+            page-size: 50
+          connections:
+            docker-kafka-server:
+              properties:
+                 bootstrap.servers: "kafka:29092"
