--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,5 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/debian
 {
 	"name": "Debian",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"dockerComposeFile": ["../docker-compose.yaml", "docker-compose.extend.yaml"],
 	"service": "java",
   	"workspaceFolder": "/workspace",
@@ -15,22 +12,16 @@
 			"jdkDistro": "tem"
 		}
 	},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Configure tool-specific properties.
-	// "customizations": {},
 	"customizations": {
 		"vscode": {
 			"settings": {
-				"java.server.launchMode": "Standard"
+				"java.server.launchMode": "Standard",
+				"redhat.telemetry.enabled": false,
+				"java.maven.downloadSources": true
 			},
 			"extensions": [
 				"vscjava.vscode-java-pack"
 			]
 		}
 	}
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
 }
