--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,8 @@ services:
   akhq:
     image: tchiotludo/akhq
     restart: unless-stopped
+    ports:
+      - "9000:8080"
     environment:
       AKHQ_CONFIGURATION: |
         akhq:
