add forwardPorts setting to devcontainer.json + add depends_on for akhq

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,8 @@ services:
   akhq:
     image: tchiotludo/akhq
     restart: unless-stopped
+    depends_on:
+      - kafka
     ports:
       - "9000:8080"
     environment:
